--- a/blog.html
+++ b/blog.html
@@ -513,6 +513,114 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://middlepot.com/img/24.png"/></center><br><br>
+<font size = 1><font color="#CBBBB1">
+<center>january . 31 . 2023</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub>🎀</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+here we go, a whole new year ahead of us .. are you excited ? are you anxious ?
+i was a little anxious at the beginning, but i wanted to keep that promise i made to myself : i will be kinder and stop pushing my limits.
+i will alow myself to be slower and rest properly, and prioritize what i want to do, rather than what others want from me. i will live for my happiness & peace of mind, first and foremost.
+if i'm unhappy, it's not worth it, and if it makes me happy, it's worth it <sub><sub>🌷</sub></sub>
+
+after having a very quiet month, i must say i feel a lot better, and finally i can say i am excited for what this year holds for me !
+i didn't do all things i wrote down, but i did both what i wanted to do + what i needed to do, so that's more than good enough.
+if i'm keeping up with my projects' goals, there is no need to worry, right ?
+
+even though i am in a very slow pace at the moment, somehow i feel way more energetic and motivated. is this what it's like to live without anxiety ? LOL
+who would have thought that overworking and stressing out about everything isn't the more efficient way to go ..
+
+
+in comparison, my physical health isn't all that great, sadly, my migraines are way too frequent and medicine is starting to have little to no effect <sub><sub>💊</sub></sub>
+bubu ( my fiancé ) is also having a similar issue, and we know it's because of our jobs. being sit down in a cheap chair + not exercising is really hurting us.
+so, we will make some big life changes this year : we'll move to a new place !!
+
+our current house is way too small ( it's literally the size of a small loft ) so we couldn't fit more furniture and good chairs for our workspace ..
+having everything clogged up in a small house is complicated, and it's getting only harder with time.
+the more hobbies we have, the more projects we have to work on - all that takes space !
+other than that, the streets here are also very hilly so we noticed that buying a pair of roller skates wasn't a very good idea. i'm pretty sure i would hit my face in the road in no time.
+so, even though i do love this house ( it's our very first home after all ) it's time to say goodbye <sub><sub>🏠</sub></sub>
+
+we decided to move for an apartment that is closer to a park, and bigger than this house ( and one extra room ) and some other places we like to go, so that we could go by foot instead of driving.
+it's still a quiet area of the city, and we will actually have a better view of the nearby mountains in there, so i'm super excited <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+now that we have a way better income than when we first moved together, we will be able to decorate our new place even more cutely and buy good quality new furniture & appliances.
+since we're expecting to move very soon, i'm spending some hours a day just searching for new stuff to buy, and honestly i'm having a blast - i absolutely adore home decor <sub><sub>🪑</sub></sub>
+i want us to only have solid wood furniture, preferably vintage white ones, so it's important to do research to find the best deals !
+i also am trying to swap all our plastic supplies & tableware for high quality porcelain, borosilicate glass, metals, solid wood and bamboo <sub><sub>🥄</sub></sub>
+i realized with the years why plastic things are so cheap - they don't last. they go to waste quickly, and most are not even recyclable .. so i want to stop using it at my best capacity.
+
+besides that, i'm also searching for cute decorations, trying to go for a "delicate vintage but also clean and minimalistic" look, which is my favorite <sub><sub>💕</sub></sub>
+just thinking of having a new space where i will be able to properly storage materials from <a id="linkbjinho" href="https://shybunny.store" target="_blank">my online store</a>, all my sewing & embroidery things, my stationery items, and even have space for a better keyboard & display for my computer .. oh, i can't wait !!
+
+without the support i receive from you fluffies we wouldn't be able to do most of these things, so i'm really really thankful .. let's keep doing our best, and making dreams come true !!
+
+
+
+as i was deciding which of my china tableware sets i will keep, and which of my "dream ones" i will buy as replacements, i had the idea for this new <a id="linkbjinho" href="https://poofties.club" target="_blank">poofties website</a> mini game <sub><sub>🫖</sub></sub>
+click the preview image to open it and play :</pre>
+<br><br>
+
+<center><a href="https://poofties.club/tableware" target="_blank"><img src="https://i.imgur.com/bAKtsRb.pngg"/></a>
+<br><br>
+<sub>🩰</sub> <a style="text-decoration: none;" href="https://file.pooftie.me/a/housework.mp3" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">housework .mp3</font></a>　
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+( don't forget to search for the exclusive hidden item code, check the hint on the <a id="linkbjinho" href="https://poofties.club/account/minigames" target="_blank">poofties account page</a> )
+
+the melody used this time is not exclusive to the game, as i have used it before elsewhere .. can you recognize it ?
+i just think it fits perfectly to the feeling of organizing cute tableware <sub>☕️</sub>
+
+having cute objects around the house really puts me in the mood for cleaning & organizing, it's very motivating !!
+but having way too many things can be overwhelming too .. so i try my best to buy wisely, and donate all things i don't really need / like.
+it's very hard though, i'm sure i have already bought some extra stuff i will regret later <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+but it's okay, more importantly is that i'm having a lot of fun these days ~
+
+
+other thing i finished making is this new web page : <a id="linkbjinho" href="https://color.pooftie.me" target="_blank">color.pooftie.me</a> <sub><sub>🖇</sub></sub></pre>
+<br><br>
+
+<center><a href="https://color.pooftie.me" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/BcvwKN1.gif"/></a>
+</center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i present to you my new "custom color pack" <sub>🌈</sub>
+this is a very interesting thing i found out while i was studying css : you can use images as font "textures" in html, instead of plain colors !!
+the thing is, this can be a little buggy, can look messy and act weird, but i was determined to make it work so i made this script with my optimized codes & premade colors.
+with it you can simply apply my custom textures in your site texts by using regular color attributes ( both css & html work neatly )
+i only made 5 colors for now, but i want to make more later. the script then will be updated automatically !
+
+if you're interested in trying it out for real, you can read the instructions on the website itself !
+( by the way, didn't the layout turn out adorable ?? i love it )
+i'm very very happy to see it working, and i hope to make more cool visual scripts in the future <sub><sub>💻</sub></sub>
+
+
+
+remember last month, when i said that i missed writing short posts ?
+i think i will finish this one just like that, once again.
+it's just so nice not to push myself, and live at a slower pace .. i feel happier than ever, and i want to keep things like that.
+
+ps : i will have some <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> things to show you next month !
+
+xoxo <sub>💗</sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://middlepot.com/img/24.png"/></center><br>
+
+<br><br>
+
 <center><img src="https://middlepot.com/img/3.png"/></center><br><br>
 <font size = 1><font color="#CBBBB1">
 <center>december . 31 . 2022</center>
