--- a/blog.html
+++ b/blog.html
@@ -597,6 +597,7 @@ i present to you my new "custom color pack" <sub>🌈</sub>
 this is a very interesting thing i found out while i was studying css : you can use images as font "textures" in html, instead of plain colors !!
 the thing is, this can be a little buggy, can look messy and act weird, but i was determined to make it work so i made this script with my optimized codes & premade colors.
 with it you can simply apply my custom textures in your site texts by using regular color attributes ( both css & html work neatly )
+the textures look more noticeable with big sized & bold fonts, but look cute with smaller fonts too, as you can see on my examples.
 i only made 5 colors for now, but i want to make more later. the script then will be updated automatically !
 
 if you're interested in trying it out for real, you can read the instructions on the website itself !
