--- a/blog.html
+++ b/blog.html
@@ -543,7 +543,7 @@ the more hobbies we have, the more projects we have to work on - all that takes 
 other than that, the streets here are also very hilly so we noticed that buying a pair of roller skates wasn't a very good idea. i'm pretty sure i would hit my face in the road in no time.
 so, even though i do love this house ( it's our very first home after all ) it's time to say goodbye <sub><sub>🏠</sub></sub>
 
-we decided to move for an apartment that is closer to a park, and bigger than this house ( and one extra room ) and some other places we like to go, so that we could go by foot instead of driving.
+we decided to move for an apartment that is bigger than this house ( a whole extra room ), closer to a park and also some other places we like to go, so that we could go by foot instead of driving.
 it's still a quiet area of the city, and we will actually have a better view of the nearby mountains in there, so i'm super excited <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
 now that we have a way better income than when we first moved together, we will be able to decorate our new place even more cutely and buy good quality new furniture & appliances.
