--- a/blog.html
+++ b/blog.html
@@ -552,7 +552,7 @@ i want us to only have solid wood furniture, preferably vintage white ones, so i
 i also am trying to swap all our plastic supplies & tableware for high quality porcelain, borosilicate glass, metals, solid wood and bamboo <sub><sub>🥄</sub></sub>
 i realized with the years why plastic things are so cheap - they don't last. they go to waste quickly, and most are not even recyclable .. so i want to stop using it at my best capacity.
 
-besides that, i'm also searching for cute decorations, trying to go for a "delicate vintage but also clean and minimalistic" look, which is my favorite <sub><sub>💕</sub></sub>
+besides that, i'm also searching for cute decorations, trying to go for a "delicate vintage but also clean and minimal" look, which is my favorite <sub><sub>💕</sub></sub>
 just thinking of having a new space where i will be able to properly storage materials from <a id="linkbjinho" href="https://shybunny.store" target="_blank">my online store</a>, all my sewing & embroidery things, my stationery items, and even have space for a better keyboard & display for my computer .. oh, i can't wait !!
 
 without the support i receive from you fluffies we wouldn't be able to do most of these things, so i'm really really thankful .. let's keep doing our best, and making dreams come true !!
