--- a/blog.html
+++ b/blog.html
@@ -550,9 +550,11 @@ now that we have a way better income than when we first moved together, we will 
 since we're expecting to move very soon, i'm spending some hours a day just searching for new stuff to buy, and honestly i'm having a blast - i absolutely adore home decor <sub><sub>🪑</sub></sub>
 i want us to only have solid wood furniture, preferably vintage white ones, so it's important to do research to find the best deals !
 i also am trying to swap all our plastic supplies & tableware for high quality porcelain, borosilicate glass, stainless steel, solid wood and bamboo <sub><sub>🥄</sub></sub>
+plastic storage items are also being replaced with new ones made of natural materials : cotton bags, wooden chests, tin caddies, round cardboard boxes.. i especially love the antique looking ones <font color="#d3a5a5" style="font-size:11px;">♡</font>
+but the natural fiber baskets certainly have my heart, as they instantly make any ambient look cozier <sub><sub>🧺</sub></sub>
 i realized with the years why plastic things are so cheap - they don't last. they go to waste quickly, and most are not even recyclable .. so i want to stop using it at my best capacity.
 
-besides that, i'm also searching for cute decorations, trying to go for a "delicate vintage but also clean and minimal" look, which is my favorite <sub><sub>💕</sub></sub>
+in resume, i'm searching for all kinds cute decorations, wallpapers, lamps, bedding, tablecloth.. trying to go for a "delicate vintage but also clean and comfy" look, which is my favorite <sub><sub>💕</sub></sub>
 just thinking of having a new space where i will be able to properly storage materials from <a id="linkbjinho" href="https://shybunny.store" target="_blank">my online store</a>, all my sewing & embroidery things, my stationery items, and even have space for a better keyboard & display for my computer .. oh, i can't wait !!!
 
 without the support i receive from you fluffies we wouldn't be able to do most of these things, so i'm really really thankful .. let's keep doing our best, and making dreams come true !!
