--- a/blog.html
+++ b/blog.html
@@ -554,7 +554,7 @@ plastic storage items are also being replaced with new ones made of natural mate
 but the natural fiber baskets certainly have my heart, as they instantly make any ambient look cozier <sub><sub>🧺</sub></sub>
 i realized with the years why plastic things are so cheap - they don't last. they go to waste quickly, and most are not even recyclable .. so i want to stop using it at my best capacity.
 
-in resume, i'm searching for all kinds cute decorations, wallpapers, lamps, bedding, tablecloth.. trying to go for a "delicate vintage but also clean and comfy" look, which is my favorite <sub><sub>💕</sub></sub>
+in resume, i'm searching for all sorts of cute decorations, wallpapers, lamps, bedding, tablecloth.. trying to go for a "delicate vintage but also clean and comfy" look, which is my favorite <sub><sub>💕</sub></sub>
 just thinking of having a new space where i will be able to properly storage materials from <a id="linkbjinho" href="https://shybunny.store" target="_blank">my online store</a>, all my sewing & embroidery things, my stationery items, and even have space for a better keyboard & display for my computer .. oh, i can't wait !!!
 
 without the support i receive from you fluffies we wouldn't be able to do most of these things, so i'm really really thankful .. let's keep doing our best, and making dreams come true !!
