--- a/blog.html
+++ b/blog.html
@@ -513,6 +513,89 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+
+<center><img src="https://middlepot.com/img/7.png"/></center><br><br>
+<font size = 1><font color="#CBBBB1">
+<center>february . 28 . 2023</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub>💗</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+have days been kind to you lately ?
+life is really exciting to me right now, as i am organizing all things on my new home, moving stuff up & down, cleaning, and all that <sub><sub>🗝</sub></sub>
+at first i was afraid that the process of moving out would be tiring, but in fact i'm feeling great, since i'm better focusing on my priorities, stressing less about trivial things, and moving my body more often.
+because of that, my migraines are already becoming less frequent !!
+
+my routine changes in general are having a big impact too, living anxiety-free ( by respecting my pace ) is something i'm willing to continue putting efforts on.
+i realized that nothing is more important than feeling healthy and happy .. i mean, it's obvious, and i always say that, but it's easy to forget and just accept bad things. don't do that, okay ?
+
+i'm super happy we found an apartment that is located exactly where we wanted, in the right time .. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+it was really important to us that we could have a pretty view of the mountains, that we could go walking to the park and other places that we like.. location wise, it really makes a difference, so we could be more in contact with nature <sub>🌱</sub>
+
+things that i bought are finally arriving, after the long carnival holidays, so now i can start to actually decorate the place according to what i imagined. so exciting !!
+
+
+oh, before i forget, <b>a little note to my penpals :</b>
+my old address is still property of our family, so there is no need to worry about your letters getting lost !!
+same goes for <a id="linkbjinho" href="https://shybunny.store" target="_blank">shy bunny store</a> packages, in case of unclaimed packages that come back, the return address is still okay.
+but of course, i will mostly use my new address from now on, so i will send it to my penpals asap <sub><sub>✉️</sub></sub>
+
+
+i'm still working on my projects in a slower pace, so i won't feel overwhelmed. after having a new organized workspace i feel like i'll have plenty of motivation to finish some harder things !
+most importantly, i'm getting things done, following my lists <sub>✏️</sub>
+
+one of the things i did was adding the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> valentine's day event, with all stuff from last year ( you can check screenshots clicking <a id="linkbjinho" href="#valentinesevent">here</a> ) + new clothes, accessories, and stickers !!
+this year i tried to make "fancier" outfits, here are some :</pre>
+<br><br>
+
+<center><img width="auto" height="200px" src="https://i.imgur.com/O5FLQjd.png">　
+<img width="auto" height="200px" src="https://i.imgur.com/hi4e7L5.png"><br><br>
+<img width="auto" height="200px" src="https://i.imgur.com/9ZsjDYj.png"><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i absolutely adore this event, it's simple but very cute !
+i love the heart & strawberry motifs <sub>🍓</sub>
+exchanging cards is also really nice, i feel so happy reading them..
+
+now we are working for stuff for the spring season, that will come by april.
+bubu is currently having a busy time at his main job, and i need his help for the more complicated things, but i also don't want to make him overwork .. well, i hope that we finish everything in time, at least the very important things <sub><sub>🩹</sub></sub>
+
+
+other thing i have finished recently is this new page for the <a id="linkbjinho" href="https://dream.pooftie.me" target="_blank">dream directory</a>, the neverending <a id="linkbjinho" href="https://dream.pooftie.me/train" target="_blank">train</a> ride <sub><sub>💻</sub></sub></pre>
+<br><br>
+
+<center><a href="https://dream.pooftie.me/train" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/JUifQF1.gif"></a><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i know this is oddly specifc, but i dream of trains very frequently, and these often have a "liminal" feeling .. sometimes they can be unsettling, but also comforting in a way, so i wanted to do something like that for a web page !
+this is a cute pink train that never leaves the station, no matter how much you wait. you can enjoy your ride listening to ambient sounds mixed with the lovely melody called "the deer with the golden lights" by princess chelsea. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+all the movements in there were made with css animations, which i'm having fun experimenting with !
+i want to create more virtual spaces like this, where people can stop by <sub>☕️</sub>
+
+
+i have this feeling that i forgot to say something.. but oh well, if i remember, i will tell you next post ~
+for now, that's all i have for today's post.
+let's go for a walk outside ? don't forget to take a bottle of water with you !
+
+xoxo <sub>🌷</sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://middlepot.com/img/7.png"/></center><br>
+
+<br><br>
+
 <center><img src="https://middlepot.com/img/24.png"/></center><br><br>
 <font size = 1><font color="#CBBBB1">
 <center>january . 31 . 2023</center>
@@ -2628,7 +2711,7 @@ so, for now, i'm still relying on notion for things that i need to keep checking
 
 
 okay, so let's go for the content i did for <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> recently !!
-it's been a while, but i still haven't posted about the valentine's day event :</pre>
+<a name="valentinesevent" id="valentinesevent"></a>it's been a while, but i still haven't posted about the valentine's day event :</pre>
 <br><br>
 
 <center><img id="valentines2022" width="430px" height="auto" src="https://i.imgur.com/w1DubXm.png">
