--- a/blog.html
+++ b/blog.html
@@ -582,7 +582,7 @@ all the movements in there were made with css animations, which i'm having fun e
 i want to create more virtual spaces like this, where people can stop by <sub>☕️</sub>
 
 
-i have this feeling that i forgot to say something.. but oh well, if i remember, i will tell you next post ~
+i have this feeling that i forgot to say something.. but oh well, if i remember, i will tell you next time ~
 for now, that's all i have for today's post.
 let's go for a walk outside ? don't forget to take a bottle of water with you !
 
