--- a/blog.html
+++ b/blog.html
@@ -632,7 +632,7 @@ it's still a quiet area of the city, and we will actually have a better view of 
 now that we have a way better income than when we first moved together, we will be able to decorate our new place even more cutely and buy good quality new furniture & appliances.
 since we're expecting to move very soon, i'm spending some hours a day just searching for new stuff to buy, and honestly i'm having a blast - i absolutely adore home decor <sub><sub>🪑</sub></sub>
 i want us to only have solid wood furniture, preferably vintage white ones, so it's important to do research to find the best deals !
-i also am trying to swap all our plastic supplies & tableware for high quality porcelain, borosilicate glass, stainless steel, solid wood and bamboo <sub><sub>🥄</sub></sub>
+i also am trying to swap all our plastic supplies & tableware for high quality porcelain, borosilicate glass, stainless steel, enamel, solid wood and bamboo <sub><sub>🥄</sub></sub>
 plastic storage items are also being replaced with new ones made of natural materials : cotton bags, wooden chests, tin caddies, round cardboard boxes.. i especially love the antique looking ones <font color="#d3a5a5" style="font-size:11px;">♡</font>
 but the natural fiber baskets certainly have my heart, as they instantly make any ambient look cozier <sub><sub>🧺</sub></sub>
 i realized with the years why plastic things are so cheap - they don't last. they go to waste quickly, and most are not even recyclable .. so i want to stop using it at my best capacity.
