--- a/about.html
+++ b/about.html
@@ -664,7 +664,7 @@ p { margin: 0; }
 i'm an artist, crafter & designer who finds joy in spending time creating cute multimedia content, and making dreams come true !<br>
 i have lots of interests, i don't do things perfectly but i work hard to improve so i can help others through my works.. i aim to be the guardian angel that will guide good-hearted people to purity and innocence.<br></font>
 <br><br><br>
-<font color="#827272">if you want more info about me and my stuff, please check out the </font><a style="color:#baa8a7;" href="https://middlepot.com/faq">faq</a>
+<font color="#827272">if you want more info about me and my stuff, please check out the </font><a style="color:#baa8a7; text-decoration: none; border-bottom:1px solid #baa8a7; padding-bottom: 0px;" href="https://middlepot.com/faq">faq</a>
 <br><br><br><br>
 <center><img style="position:absolute; left:-20px; padding-bottom:10px;" src="https://i.imgur.com/K9TlvCe.png"/></center></div>
 <br><br>
