--- a/links.html
+++ b/links.html
@@ -493,12 +493,12 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/ecPVEov.png"></sub></sub></sub> ‌ my websites :</font><div style="line-height:2px;"><br>
 <br></div>
 <div id="linkitems1" style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
-<font color="#7a6b6b">://</font> <a id="ooo" href="http://ഒ.㏄" target="_blank" >ഒ.㏄</a><br>
- ‌  ‌‌ ‌ <font color="#7a6b6b">⤷</font> <a id="ooo" href="https://middlepot.com" target="_blank" >middlepot.com</a><br>
-<font color="#7a6b6b">://</font> <a id="ooo" href="https://pooftie.me" target="_blank" >pooftie.me</a><br>
-<font color="#7a6b6b">://</font> <a id="ooo" href="https://poofties.club" target="_blank" >poofties.club</a><br>
-<font color="#7a6b6b">://</font> <a id="ooo" href="https://shybunny.store" target="_blank" >shybunny.store</a><br>
-<font color="#7a6b6b">://</font> <a id="ooo" href="https://myfluffy.life" target="_blank" >myfluffy.life</a><br>
+<font color="#7a6b6b">://</font> <a id="ooo" href="http://ഒ.㏄" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >ഒ.㏄</a><br>
+ ‌  ‌‌ ‌ <font color="#7a6b6b">⤷</font> <a id="ooo" href="https://middlepot.com" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >middlepot.com</a><br>
+<font color="#7a6b6b">://</font> <a id="ooo" href="https://pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >pooftie.me</a><br>
+<font color="#7a6b6b">://</font> <a id="ooo" href="https://poofties.club" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >poofties.club</a><br>
+<font color="#7a6b6b">://</font> <a id="ooo" href="https://shybunny.store" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >shybunny.store</a><br>
+<font color="#7a6b6b">://</font> <a id="ooo" href="https://myfluffy.life" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >myfluffy.life</a><br>
 <font color="#c7adad">:// puf.cafe</font><br>
 <font color="#c7adad">:// puf.to</font><br>
  ‌  ‌‌  ‌<font color="#c7adad">⤷ puf.bot</font><br>
@@ -511,49 +511,49 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <div style="margin-top:-2px;"><sub><sub><img width="auto" height="18px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b09698"> ‌ my side web pages :<div style="line-height:2px;"><br>
 <br></div>
 <div id="linkitems2" style="border: none; width: 130px; height: 209px; margin-top:3px; overflow: auto; overflow: scroll; line-height:18px; padding-right:2px; padding-left:5px;">
-<font color="#7a6b6b">color.</font> <a id="ooo" href="https://color.pooftie.me" target="_blank" >pack installing</a>
+<font color="#7a6b6b">color.</font> <a id="ooo" href="https://color.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >pack installing</a>
 <br>
-<font color="#7a6b6b">care.</font> <a id="ooo" href="https://care.pooftie.me" target="_blank" >my safe room</a>
+<font color="#7a6b6b">care.</font> <a id="ooo" href="https://care.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >my safe room</a>
 <br>
-<font color="#7a6b6b">dream.</font> <a id="ooo" href="https://dream.pooftie.me" target="_blank" > directory</a>
+<font color="#7a6b6b">dream.</font> <a id="ooo" href="https://dream.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" > directory</a>
 <br>
-<font color="#7a6b6b">mail.</font> <a id="ooo" href="https://mail.pooftie.me" target="_blank" >virtual template</a>
+<font color="#7a6b6b">mail.</font> <a id="ooo" href="https://mail.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >virtual template</a>
 <br>
-<font color="#7a6b6b">frilly.</font> <a id="ooo" href="https://frilly.pooftie.me" target="_blank" >markup language</a>
+<font color="#7a6b6b">frilly.</font> <a id="ooo" href="https://frilly.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >markup language</a>
 <br>
-<font color="#7a6b6b">base.</font> <a id="ooo" href="https://base.pooftie.me" target="_blank" >codes for you</a>
+<font color="#7a6b6b">base.</font> <a id="ooo" href="https://base.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >codes for you</a>
 <br>
-<font color="#7a6b6b">sozai.</font> <a id="ooo" href="https://sozai.pooftie.me" target="_blank" >web materials</a>
+<font color="#7a6b6b">sozai.</font> <a id="ooo" href="https://sozai.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >web materials</a>
 <br>
-<font color="#7a6b6b">2006.</font> <a id="ooo" href="https://2006.pooftie.me" target="_blank" >old blog tribute</a>
+<font color="#7a6b6b">2006.</font> <a id="ooo" href="https://2006.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >old blog tribute</a>
 <br>
-<font color="#7a6b6b">emoji.</font> <a id="ooo" href="https://emoji.pooftie.me" target="_blank" >pack installing</a>
+<font color="#7a6b6b">emoji.</font> <a id="ooo" href="https://emoji.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >pack installing</a>
 <br>
-<font color="#7a6b6b">utf8.</font> <a id="ooo" href="https://utf8.pooftie.me" target="_blank" >unicode fonts</a>
+<font color="#7a6b6b">utf8.</font> <a id="ooo" href="https://utf8.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >unicode fonts</a>
 <br>
-<font color="#7a6b6b">1997.</font> <a id="ooo" href="https://1997.pooftie.me" target="_blank" >simulation</a>
+<font color="#7a6b6b">1997.</font> <a id="ooo" href="https://1997.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >simulation</a>
 <br>
-<font color="#7a6b6b">ascii.</font> <a id="ooo" href="https://ascii.pooftie.me" target="_blank" >text materials</a>
+<font color="#7a6b6b">ascii.</font> <a id="ooo" href="https://ascii.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >text materials</a>
 <br>
-<font color="#7a6b6b">aes.</font> <a id="ooo" href="https://aes.pooftie.me" target="_blank" >virtual journal</a>
+<font color="#7a6b6b">aes.</font> <a id="ooo" href="https://aes.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >virtual journal</a>
 <br>
-<font color="#7a6b6b">tea.</font> <a id="ooo" href="https://tea.pooftie.me" target="_blank" >current weather</a>
+<font color="#7a6b6b">tea.</font> <a id="ooo" href="https://tea.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >current weather</a>
 <br>
-<font color="#7a6b6b">fairy.</font> <a id="ooo" href="https://fairy.pooftie.me" target="_blank" >about fairies</a>
+<font color="#7a6b6b">fairy.</font> <a id="ooo" href="https://fairy.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >about fairies</a>
 <br>
-<font color="#7a6b6b">ch.</font> <a id="ooo" href="https://ch.pooftie.me" target="_blank" >simulation</a>
+<font color="#7a6b6b">ch.</font> <a id="ooo" href="https://ch.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >simulation</a>
 <br>
-<font color="#7a6b6b">kafra.</font> <a id="ooo" href="https://kafra.pooftie.me" target="_blank" >memories</a>
+<font color="#7a6b6b">kafra.</font> <a id="ooo" href="https://kafra.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >memories</a>
 <br>
-<font color="#7a6b6b">test.</font> <a id="ooo" href="https://test.pooftie.me" target="_blank" >html box</a>
+<font color="#7a6b6b">test.</font> <a id="ooo" href="https://test.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >html box</a>
 <br>
-<font color="#7a6b6b">file.</font> <a id="ooo" href="https://file.pooftie.me" target="_blank" >closed archive</a>
+<font color="#7a6b6b">file.</font> <a id="ooo" href="https://file.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >closed archive</a>
 <br>
-<font color="#7a6b6b">day.</font> <a id="ooo" href="https://day.pooftie.me" target="_blank" >my routine</a>
+<font color="#7a6b6b">day.</font> <a id="ooo" href="https://day.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >my routine</a>
 <br>
-<font color="#7a6b6b">teddy.</font> <a id="ooo" href="https://teddy.pooftie.me" target="_blank" >virtual collection</a>
+<font color="#7a6b6b">teddy.</font> <a id="ooo" href="https://teddy.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >virtual collection</a>
 <br>
-<font color="#7a6b6b">soft.</font> <a id="ooo" href="https://soft.pooftie.me" target="_blank" >???</a>
+<font color="#7a6b6b">soft.</font> <a id="ooo" href="https://soft.pooftie.me" target="_blank" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;" >???</a>
 <br>
 </div></div>
 </div>
@@ -565,7 +565,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <div style="position:absolute; left:20%; right:20%; top:80%; line-height:14px;">
 
 <center><div style="position:relative; top:-35; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 210px; height: 20px; overflow-x:hidden; line-height:14px; padding:5px;">
-<center><sub><sub><img width="auto" height="20px" src="https://i.imgur.com/0ncrfbs.png"></sub></sub><font color="#b09698" style="font-size:10px;"> ‌ my email : </font><a id="ooo" href="mailto:letters@middlepot.com">letters@middlepot.com</a></center></div></center>
+<center><sub><sub><img width="auto" height="20px" src="https://i.imgur.com/0ncrfbs.png"></sub></sub><font color="#b09698" style="font-size:10px;"> ‌ my email : </font><a id="ooo" href="mailto:letters@middlepot.com" style="text-decoration: none; border-bottom:1px solid #c4a9ab; padding-bottom: 0px;">letters@middlepot.com</a></center></div></center>
 
 <div style="position:relative; top:-23px;">
 <font color="#a59490" style="font-size:9px;">
