--- a/gaming.html
+++ b/gaming.html
@@ -510,7 +510,7 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
 <font color="#a8958d">　<b>ragnarok online</b><br>
 　　　official br server : thor<br>
-　　　ui skin : <a href="https://file.pooftie.me/zip/rosemilktea.zip" target="_blank"><font color="#b08087">rosemilktea.zip</font></a></font><br><br><br>
+　　　ui skin : <a href="https://file.pooftie.me/zip/rosemilktea.zip" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">rosemilktea.zip</font></a></font><br><br><br>
 
 <div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 360px; height: 140px; line-height:10px; padding:5px;">
 <img style="position:absolute; left:5px;" src="https://i.imgur.com/vA6cZGh.gif"><img style="position:absolute; left:80px; top:105px;" src="https://i.imgur.com/83XdPpp.png">
@@ -524,8 +524,8 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <font color="#b89196">hometown :</font> prontera<br>
 <font color="#b89196">aspiration :</font> help others<br>
 　　by bringing peace ..<br>
-　　　<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/xmas_dun02" target="_blank"><font color="#b08087">xmas_dun02</font></a><br>
-　　　<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/56.mp3" target="_blank"><font color="#b08087">56.mp3</font></a>
+　　　<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/xmas_dun02" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">xmas_dun02</font></a><br>
+　　　<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/56.mp3" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">56.mp3</font></a>
 </font>
 <font color="#a37c81" style="position:absolute; left:240px; top:9px; font-size:8px;">
 <sub><sub><img width="20px" height="auto" src="https://i.imgur.com/3TeZWaF.png"></sub></sub> ‌ <b>precious items :</b><br>
@@ -557,8 +557,8 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <font color="#b89196">hometown :</font> comodo<br>
 <font color="#b89196">aspiration :</font> explore the<br>
 　　whole wide world !!<br>
-　　　<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/amatsu" target="_blank"><font color="#b08087">amatsu</font></a><br>
-　　　<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/73.mp3" target="_blank"><font color="#b08087">73.mp3</font></a>
+　　　<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/amatsu" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">amatsu</font></a><br>
+　　　<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/73.mp3" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">73.mp3</font></a>
 </font>
 <font color="#a37c81" style="position:absolute; left:240px; top:9px; font-size:8px;">
 <sub><sub><img width="20px" height="auto" src="https://i.imgur.com/3TeZWaF.png"></sub></sub> ‌ <b>precious items :</b><br>
@@ -590,8 +590,8 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <font color="#b89196">hometown :</font> hugel<br>
 <font color="#b89196">aspiration :</font> collect all cute<br>
 　　‌ items, specially stuffies.. !<br>
-　　　<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/mosk_dun01" target="_blank"><font color="#b08087">mosk_dun01</font></a><br>
-　　　<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/64.mp3" target="_blank"><font color="#b08087">64.mp3</font></a>
+　　　<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/mosk_dun01" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">mosk_dun01</font></a><br>
+　　　<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/64.mp3" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">64.mp3</font></a>
 </font>
 <font color="#a37c81" style="position:absolute; left:240px; top:9px; font-size:8px;">
 <sub><sub><img width="20px" height="auto" src="https://i.imgur.com/3TeZWaF.png"></sub></sub> ‌ <b>precious items :</b><br>
@@ -623,8 +623,8 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <font color="#b89196">hometown :</font> lasagna<br>
 <font color="#b89196">aspiration :</font> make the most<br>
 yummy sweets & desserts ♡<br>
-<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/niflheim" target="_blank"><font color="#b08087">niflheim</font></a><br>
-<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/85.mp3" target="_blank"><font color="#b08087">85.mp3</font></a>
+<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/niflheim" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">niflheim</font></a><br>
+<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/85.mp3" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">85.mp3</font></a>
 </font>
 <font color="#a37c81" style="position:absolute; left:270px; top:9px; font-size:8px;">
 <sub><sub><img width="20px" height="auto" src="https://i.imgur.com/3TeZWaF.png"></sub></sub> ‌ <b>precious items :</b><br>
@@ -659,8 +659,8 @@ yummy sweets & desserts ♡<br>
 <font color="#b89196">hometown :</font> lutie<br>
 <font color="#b89196">aspiration :</font> be the absolute<br>
 cutest baby there is.<br>
-<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/xmas" target="_blank"><font color="#b08087">xmas</font></a><br>
-<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/57.mp3" target="_blank"><font color="#b08087">57.mp3</font></a>
+<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/xmas" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">xmas</font></a><br>
+<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/57.mp3" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">57.mp3</font></a>
 </font>
 <font color="#a37c81" style="position:absolute; left:240px; top:9px; font-size:8px;">
 <sub><sub><img width="20px" height="auto" src="https://i.imgur.com/3TeZWaF.png"></sub></sub> ‌ <b>precious items :</b><br>
@@ -691,8 +691,8 @@ cutest baby there is.<br>
 <font color="#b89196">pet :</font> miyabi ningyo ( mimi )<br>
 <font color="#b89196">hometown :</font> amatsu<br>
 <font color="#b89196">aspiration :</font> make you proud..<br>
-<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/ama_fild01" target="_blank"><font color="#b08087">ama_fild01</font></a><br>
-<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/76.mp3" target="_blank"><font color="#b08087">76.mp3</font></a>
+<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/ama_fild01" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">ama_fild01</font></a><br>
+<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/76.mp3" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">76.mp3</font></a>
 </font>
 <font color="#a37c81" style="position:absolute; left:240px; top:9px; font-size:8px;">
 <sub><sub><img width="20px" height="auto" src="https://i.imgur.com/3TeZWaF.png"></sub></sub> ‌ <b>precious items :</b><br>
@@ -723,8 +723,8 @@ cutest baby there is.<br>
 <font color="#b89196">pet :</font> marionette ( doll )<br>
 <font color="#b89196">hometown :</font> geffen<br>
 <font color="#b89196">aspiration :</font> pet your pets<br>
-<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/nif_fild01" target="_blank"><font color="#b08087">nif_fild01</font></a><br>
-<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/50.mp3" target="_blank"><font color="#b08087">50.mp3</font></a>
+<font color="#b89196">fav place :</font> <a href="https://divine-pride.net/client/nif_fild01" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">nif_fild01</font></a><br>
+<font color="#b89196">fav music :</font> <a href="https://divine-pride.net/media/bgm/50.mp3" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">50.mp3</font></a>
 </font>
 <font color="#a37c81" style="position:absolute; left:240px; top:9px; font-size:8px;">
 <sub><sub><img width="20px" height="auto" src="https://i.imgur.com/3TeZWaF.png"></sub></sub> ‌ <b>precious items :</b><br>
@@ -780,13 +780,13 @@ cutest baby there is.<br>
 
 <font color="#a37c81" style="position:absolute; left:115px; top:3px; font-size:8px;">
 <sub><img width="auto" height="20px" src="https://i.imgur.com/Se1Diyp.png"></sub> ‌<b>fluff</b>#3583<font style="line-height:23px;"><br></font>
-　<font color="#b89196">level :</font> 59<br>
+　<font color="#b89196">level :</font> 60<br>
 　<font color="#b89196">fav mode :</font> normal<br>
 　<font color="#b89196">fav title :</font> snow angel<br>
 　<font color="#b89196" style="line-height:5px;">fav orb : <sub><sub><sub><img width="auto" height="40px" src="https://i.imgur.com/9sEBAGc.png"></sub></sub></sub><br>
 <br></font>
  ‌ <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/6QZYFsf.png"></sub></sub> ‌ <b>skill tree :</b><font style="line-height:20px;"><br></font>
-　<font color="#b89196">spiritual guide [29]</font><br>
+　<font color="#b89196">spiritual guide [30]</font><br>
 　<font color="#b89196">wind master [26]</font><br>
 　<font color="#b89196" style="line-height:5px;">physicist [03]<br><br></font>
 　<font color="#b89196">items :</font> ‌ <sub><img width="auto" height="80px" src="https://i.imgur.com/q8leahH.png"></sub><br></font>
@@ -905,21 +905,21 @@ cutest baby there is.<br>
 　<font color="#b89196">hometown :</font> klaipeda<br>
 　<font color="#b89196">aspiration :</font> go on many<br>　adventures, have fun !!<br>
 　<font color="#b89196">fav place :</font> myrkiti farm<br>
-　<font color="#b89196">fav music :</font> <a href="https://file.pooftie.me/tos/47.mp3" target="_blank"><font color="#b08087">47.mp3</font></a>
+　<font color="#b89196">fav music :</font> <a href="https://file.pooftie.me/tos/47.mp3" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">47.mp3</font></a>
 </font>
 <font color="#a37c81" style="position:absolute; left:265px; top:9px; font-size:8px;">
 <sub><sub><sub><sub><img width="30px" height="auto" src="https://i.imgur.com/Ff73KkG.png"></sub></sub></sub></sub> <b>photo book :</b><br>
 <br>
-• <a href="https://file.pooftie.me/tos/uskis%20arable%20land.jpg" target="_blank"><font color="#b08087">uskis arable land</font></a><br>
-• <a href="https://file.pooftie.me/tos/karolis%20springs.jpg" target="_blank"><font color="#b08087">karolis springs</font></a><br>
-• <a href="https://file.pooftie.me/tos/woods%20of%20the%20linked%20bridges.jpg" target="_blank"><font color="#b08087">woods of the linked bridges</font></a><br>
-• <a href="https://file.pooftie.me/tos/myrkiti%20farm.jpg" target="_blank"><font color="#b08087">myrkiti farm</font></a><br>
-• <a href="https://file.pooftie.me/tos/aqueduct%20bridge%20area.jpg" target="_blank"><font color="#b08087">aqueduct bridge area</font></a><br>
-• <a href="https://file.pooftie.me/tos/vieta%20gorge.jpg" target="_blank"><font color="#b08087">vieta gorge</font></a><br>
-• <a href="https://file.pooftie.me/tos/veja%20ravine.jpg" target="_blank"><font color="#b08087">veja ravine</font></a><br>
-• <a href="https://file.pooftie.me/tos/tenants'%20farm.jpg" target="_blank"><font color="#b08087">tenants' farm</font></a><br>
-• <a href="https://file.pooftie.me/tos/knidos%20jungle.jpg" target="_blank"><font color="#b08087">knidos jungle</font></a><br>
-• <a href="https://file.pooftie.me/tos/srautas%20gorge.jpg" target="_blank"><font color="#b08087">srautas gorge</font></a><br>
+• <a href="https://file.pooftie.me/tos/uskis%20arable%20land.jpg" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">uskis arable land</font></a><br>
+• <a href="https://file.pooftie.me/tos/karolis%20springs.jpg" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">karolis springs</font></a><br>
+• <a href="https://file.pooftie.me/tos/woods%20of%20the%20linked%20bridges.jpg" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">woods of the linked bridges</font></a><br>
+• <a href="https://file.pooftie.me/tos/myrkiti%20farm.jpg" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">myrkiti farm</font></a><br>
+• <a href="https://file.pooftie.me/tos/aqueduct%20bridge%20area.jpg" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">aqueduct bridge area</font></a><br>
+• <a href="https://file.pooftie.me/tos/vieta%20gorge.jpg" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">vieta gorge</font></a><br>
+• <a href="https://file.pooftie.me/tos/veja%20ravine.jpg" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">veja ravine</font></a><br>
+• <a href="https://file.pooftie.me/tos/tenants'%20farm.jpg" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">tenants' farm</font></a><br>
+• <a href="https://file.pooftie.me/tos/knidos%20jungle.jpg" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">knidos jungle</font></a><br>
+• <a href="https://file.pooftie.me/tos/srautas%20gorge.jpg" target="_blank" style="text-decoration: none; border-bottom:1px solid #ccb1b1; padding-bottom: 0px;"><font color="#b08087">srautas gorge</font></a><br>
 </div>
 </font>
 
