--- a/index.html
+++ b/index.html
@@ -493,24 +493,24 @@ html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 10px !
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div><div id="updateitems">
-　　02.28 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> post on: <a href="/blog" style="text-decoration: none;"><font color="#DFB7B7">/blog</font></a><br>
-　　02.26 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> page on: <a href="/dream" style="text-decoration: none;"><font color="#DFB7B7">/dream</font></a><br>
-　　02.20 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
-　　02.12 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> event on: <a href="/myfluffylife" style="text-decoration: none;"><font color="#DFB7B7">/myfluffylife</font></a><br>
-　　02.09 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> link on: <a href="/recommended" style="text-decoration: none;"><font color="#DFB7B7">/recommended</font></a><br>
+　　03.31 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> post on: <a href="/blog" style="text-decoration: none;"><font color="#DFB7B7">/blog</font></a><br>
+　　03.30 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> mini game on: <a href="/poofties" style="text-decoration: none;"><font color="#DFB7B7">/poofties</font></a><br>
+　　03.28 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> page on: <a href="/dream" style="text-decoration: none;"><font color="#DFB7B7">/dream</font></a><br>
+　　03.25 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
+　　03.21 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> update on: <a href="/gaming" style="text-decoration: none;"><font color="#DFB7B7">/gaming</font></a><br>
 </div></div>
 </center>
 
 <br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2023 . february . 28</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2023 . march . 31</font></font></font>
 <div style="line-height: 13px"><br><br></div>
 <div style="line-height: 10px">
-<font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="/tips"><font color="#b7a596"> send me a little tip </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="/tips" style="text-decoration: none;"><font color="#b7a596"> send me a little tip </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
 <br><br>
-<font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="https://myfluffy.life" target="_blank"><font color="#ccabab"> play my online game </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="https://myfluffy.life" target="_blank" style="text-decoration: none;"><font color="#ccabab"> play my online game </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
 <br><br>
-<font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="https://shybunny.store" target="_blank"><font color="#c9a5a5"> visit my craft store </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font></div>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="https://shybunny.store" target="_blank" style="text-decoration: none;"><font color="#c9a5a5"> visit my craft store </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font></div>
 
 <div id="indextext1"><div style="line-height: 13px"><br><br></div>
 <font color="#c4ae9d">welcome to my safe corner on the internet !<br>
