--- a/portfolio.html
+++ b/portfolio.html
@@ -840,9 +840,9 @@ function resetPlayer() {
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ compositing ..<br><br><br>
-<sub><img src="https://i.imgur.com/0iG1uGb.png"></sub> <a href="https://file.pooftie.me/a/tiptoes.mp3" target="_blank" id="linkzinhoinho">tiptoes .mp3</a><br>
-<sub><img src="https://i.imgur.com/0iG1uGb.png"></sub> <a href="https://file.pooftie.me/a/little%20girl.mp3" target="_blank" id="linkzinhoinho">little girl .mp3</a><br>
-<sub><img src="https://i.imgur.com/0iG1uGb.png"></sub> <a href="https://file.pooftie.me/a/old%20stuffie.mp3" target="_blank" id="linkzinhoinho">old stuffie .mp3</a>
+<sub><img src="https://i.imgur.com/0iG1uGb.png"></sub> <a href="https://file.pooftie.me/a/tiptoes.mp3" target="_blank" style="text-decoration: none; border-bottom:1px solid #c7a5a5; padding-bottom: 0px;" id="linkzinhoinho">tiptoes .mp3</a><br>
+<sub><img src="https://i.imgur.com/0iG1uGb.png"></sub> <a href="https://file.pooftie.me/a/little%20girl.mp3" target="_blank" style="text-decoration: none; border-bottom:1px solid #c7a5a5; padding-bottom: 0px;" id="linkzinhoinho">little girl .mp3</a><br>
+<sub><img src="https://i.imgur.com/0iG1uGb.png"></sub> <a href="https://file.pooftie.me/a/old%20stuffie.mp3" target="_blank" style="text-decoration: none; border-bottom:1px solid #c7a5a5; padding-bottom: 0px;" id="linkzinhoinho">old stuffie .mp3</a>
 <br><br><br>
 <div style="line-height:3px;"><br><br><br><a name="embroidery" id="embroidery"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
